Fixed site-logo overlap

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -278,3 +278,6 @@ p img + em {
 	float: right;
 	max-width: 25%;
 }
+.end-float {
+	clear: both;
+}
